# voto-vc

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.backend.prod  Dockerfile.frontend  Dockerfile.frontend.prod  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .coverage  2026-03-08-232518-oi-voc-salvou-uns-planos-na-memria-para-o-aplic.txt  2026-03-19-111823-local-command-caveatcaveat-the-messages-below-w.txt  alembic.ini  aplicar_reescritas.py  aplicar_reescritas_prod.sh  check_stats.sh  classificar_temas.py  enriquecer_proposicoes.py  export_divisivas.py  export_restantes.py  importar_resumos.py  inventario.py  normalizar_nomes.py  processar_restantes.py  pyproject.toml  reescrever_proposicoes.py  resumir_proposicoes.py  run_overnight.sh
backend/alembic/: env.py
backend/alembic/versions/: 75fdf91a7553_initial_schema.py  944ac0d79f97_add_posicoes_tables.py  a1b2c3d4e5f6_add_orientacoes_bancada_and_update_blocos.py  b7e2f4a1c3d5_add_en_translation_columns.py  c8d9e0f1a2b3_drop_auth_tables.py  d4e5f6a7b8c9_add_perfis_compartilhados.py  d6a1012c8434_add_provedor_auth_and_provedor_id_to_.py  f89386f9f937_add_index_on_votacoes_proposicao_id.py
backend/app/: config.py  database.py  main.py  middleware.py  utils.py
backend/app/classification/: classifier.py  rules.py  topics.py
backend/app/core/: deps.py  exceptions.py  security.py
backend/app/ingestion/: base.py  bulk_import.py  camara.py  constants.py  find_divisive.py  historical_import.py  import_orientacoes.py  import_senado.py  link_unlinked.py  link_votacoes.py  normalize.py  senado.py  sync.py
backend/app/models/: __init__.py  base.py  parlamentar.py  partido.py  perfil.py  posicao.py  proposicao.py  (+3 more)
backend/scripts/: seed_posicoes.py  translate_proposicoes.py
backend/tests/: conftest.py  test_api.py  test_classification.py  test_ingestion.py  test_matching.py  test_orientacao.py  test_posicoes.py
(+141 files in other folders)
