[project]
name = "votovc-backend"
version = "0.1.0"
description = "Backend API for voto.vc - helping Brazilian voters find aligned politicians"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "pydantic[email]>=2.0",
    "slowapi>=0.1.9",
    "redis>=5.0",
    "structlog>=24.0",
    "anthropic>=0.42",
    "pdfplumber>=0.11.9",
    "Pillow>=11.0",
    "stripe>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "aiosqlite>=0.21",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/ingestion/*" = ["E501"]
"alembic/*" = ["E501", "I001", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = []
